# sovereign-pair

./: .env.example  .gitignore  .gitleaks.toml  .gitleaksignore  .opencode.json  .ruff.toml  .semgrepignore  .trivyignore  CHANGELOG.md  Caddyfile  Cargo.toml  Dockerfile.api  Dockerfile.web  README.md  ROADMAP.md  THIRDPARTY_LICENSES.txt  auto_resolve.mjs  build_desktop.sh  core_log.txt  docker-compose.hybrid.yml  docker-compose.local.yml  docker-compose.n8n.yml  docker-compose.yml  fix_vue.py  get_token.py  migrate_db.py  old_chat.diff  opencode.json  pytest.ini  requirements.txt  run_logs.txt  settings.json  setup.py  sovereign-pair-widget.plasmoid  speedup.py  strip_headers.py  test_accountant.py  test_amputation.py  test_chat.py  test_dad.py  (+21 more)
core/: Cargo.toml  autobahn_rules.yml  test_payload.sh
core/python_workers/: analyze_and_join_time_series.py  ast_jail.py  culture_matrix.py  empirical_verifier.py  health_check_apis.py  market_pricing_matrix.py  registry.json  sovereign_matrix.py  sovereign_utils.py
core/python_workers/tests/: __init__.py  test_ast_jail.py  test_time_series.py
core/src/: adblocker.rs  api.rs  api_chat.rs  api_mcp.rs  api_mesh.rs  api_multimodal.rs  api_projects.rs  api_rag.rs  api_settings.rs  api_tools.rs  api_trainer.rs  api_vault.rs  auto_evaluator.rs  db.rs  guardrails.rs  hardware.rs  health_gate.rs  kms.rs  main.rs  mcp.rs  memory_manager.rs  mesh_installer.rs  mesh_router.rs  models.rs  multimodal.rs  office_parser.rs  oracle_worker.rs  os_installer.rs  plan_execute.rs  rag.rs  realtime.rs  research.rs  rewoo.rs  sandbox.rs  ssh_gateway.rs  ssh_mesh_connector.rs  sync_engine.rs  telemetry.rs  turboquant.rs
core/src/api_tools/: nvidia_client.rs  openrouter_client.rs  qwen_client.rs
core/src/schemas/: 001_sensus_init.sql  004_ticker_registry.sql  005_openrouter_settings.sql
core/src/tests/: health_gate_tests.rs  mod.rs  openrouter_tests.rs  (+5 more)
desktop/src-tauri/: Cargo.toml  tauri.conf.json
(+464 files in other folders)
