[package]
name = "sovereign-core"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web Framework & Async Runtime (O novo FastAPI / Uvicorn)
axum = "0.7.5"
tokio = { version = "1.37.0", features = ["full"] }

# Serialization & Deserialization (O novo Pydantic)
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"

# Request manipulation (Para o Roteador Híbrido Cíbrido)
reqwest = { version = "0.12.4", features = ["json", "stream"] }
futures-util = "0.3.30"

# Environment & Logging
dotenvy = "0.15.7"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.8.0", features = ["v4"] }
